feature: make responsivity for desktop

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
     </header>
     <main>
-        <div class="main-carousel">
-            <img src="./assets/images/main-news.png" alt="Photo from NRF 2020 event">
+        <div class="main-container">
+            <img src="./assets/images/main-news.png" alt="Photo from NRF 2020 event" class="main-news-img">
             <div class="main-news">
                 <h1> NRF 2020: conheça os top 5 assuntos do evento. </h1>
                 <p class="main-news-text">O maior evento sobre varejo do mundo mostrando as tendências, oportunidades e inovações para o setor.</p>
@@ -28,13 +28,13 @@
         </div>
         <div class="news-container">
             <div class="news-block">
-                <img src="./assets/images/banner-kobe.png" alt="Kobe Bryant as NBA logo">
+                <img src="./assets/images/banner-kobe.png" alt="Kobe Bryant as NBA logo" class="news-img">
                 <h3 class="secondary-news-title"> Petição para colocar Kobe Bryant no logo da NBA </h3>
                 <p class="font"><i>Fonte: Daily Mail.</i></p>
                 <hr class="underbar" id="secondary-underbar">
             </div>
             <div class="news-block">
-                <img src="./assets/images/banner-whatsapp.png" alt="WhatsApp Logo">
+                <img src="./assets/images/banner-whatsapp.png" alt="WhatsApp Logo" class="news-img">
                 <h3 class="secondary-news-title"> Whatsapp terá função de pagamento em 2020. </h2>
                     <p class="font"> <i>Fonte: Proxxima.</i></p>
                     <hr class="underbar" id="tertiary-underbar">
